[gd_scene load_steps=8 format=2]

[ext_resource path="res://BabaGodotLib/Absract/StateMachine/StateBase.gd" type="Script" id=1]
[ext_resource path="res://BabaGodotLib/Absract/StateMachine/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://Scene/Character/Perso.png" type="Texture" id=3]
[ext_resource path="res://Scene/Character/Character.gd" type="Script" id=4]
[ext_resource path="res://BabaGodotLib/Absract/StateMachine/StateLabel.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 6 )

[sub_resource type="GDScript" id=2]
script/source = "extends StateBase

#### ACCESSORS ####



#### BUILT-IN ####

func _ready() -> void:
	pass

#### VIRTUALS ####

func enter_state() -> void:
	owner.velocity.y = 0

func exit_state() -> void:
	owner.trigger_jump_tolerence()

#### LOGIC ####



#### INPUTS ####



#### SIGNAL RESPONSES ####
"

[node name="Character" type="KinematicBody2D"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="StatesMachine" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Idle" type="Node" parent="StatesMachine"]
script = ExtResource( 1 )

[node name="Move" type="Node" parent="StatesMachine"]
script = ExtResource( 1 )

[node name="Jump" type="Node" parent="StatesMachine"]
script = ExtResource( 1 )

[node name="Fall" type="Node" parent="StatesMachine"]
script = ExtResource( 1 )

[node name="Hurt" type="Node" parent="StatesMachine"]
script = ExtResource( 1 )

[node name="Dash" type="Node" parent="StatesMachine"]
script = ExtResource( 1 )

[node name="WallGrab" type="Node" parent="StatesMachine"]
script = SubResource( 2 )

[node name="StateLabel" type="Label" parent="StatesMachine"]
margin_left = -20.0409
margin_top = -27.1842
margin_right = 19.9591
margin_bottom = -13.1842
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="JumpTolerenceTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="direction_changed" from="." to="." method="_on_Character_direction_changed"]
[connection signal="timeout" from="JumpBufferTimer" to="." method="_on_JumpBufferTimer_timeout"]
[connection signal="timeout" from="JumpTolerenceTimer" to="." method="_on_JumpTolerenceTimer_timeout"]
